--- a/css/style.css
+++ b/css/style.css
@@ -23,6 +23,7 @@ footer {
     padding: 30px;
     background-image: linear-gradient(to right, #5637DD, #3046C5, #60106B);
     color: white;
+    margin: 0;
 }
 
 .row-content {
@@ -30,3 +31,14 @@ footer {
     border-bottom: 1px ridge;
     min-height: 200px;
 }
+.site-footer{
+    background-image: linear-gradient(#CEC8FF, white);
+    padding: 20px 0;
+}
+.navbar {
+    background-color: #901CAD;
+}
+a, a:hover {
+    color: inherit;
+    text-decoration: none;
+  }
