--- a/css/style.css
+++ b/css/style.css
@@ -61,4 +61,14 @@ a, a:hover {
   z-index: 100;
 }
 
+#reserveModal .modal-header {
+  background-color: #17A2B8;
+  color: white;
+}
+
+#loginModal .modal-header {
+  background-color: #17A2B8;
+  color: white;
+}
+
 /*# sourceMappingURL=style.css.map */
